# project-template

./: .cursorrules  .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  store.sqlite3
.cargo/: config.toml
.claude/hooks/: build-contracts.sh
.claude/skills/local-node-validation/: SKILL.md
.claude/skills/miden-client-cli/: SKILL.md
.claude/skills/miden-concepts/: SKILL.md
.claude/skills/rust-sdk-patterns/: SKILL.md
.claude/skills/rust-sdk-pitfalls/: SKILL.md
.claude/skills/rust-sdk-source-guide/: SKILL.md
.claude/skills/rust-sdk-testing-patterns/: SKILL.md
.github/workflows/: book.yml  build-docker.yml  changelog.yml  ci.yml  lint.yml  publish-debian.yml  publish-docker.yml  release-plz-dry-run.yml  release-plz.yml  test.yml
configs/: .release-plz.toml
contracts/counter-account/: Cargo.toml
contracts/counter-account/src/: lib.rs
contracts/increment-note/: Cargo.toml
contracts/increment-note/src/: lib.rs
crates/mycrate/: Cargo.toml  README.md
crates/mycrate/src/: lib.rs  logging.rs
docs/: book.toml
docs/src/: EXPORTED.md  SUMMARY.md  index.md
integration/: Cargo.toml
integration/src/: helpers.rs
integration/tests/: counter_test.rs
masm/accounts/: counter.masm
masm/scripts/: increment_script.masm
packaging/mybinary/: miden-mybinary.service  postinst  postrm
src/: common.rs  main.rs
tests/: increment_count_test.rs
