# TODO(template) update members
[workspace]
members = ["bin/mybinary", "crates/mycrate"]

resolver = "2"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
readme       = "README.md"
repository   = ""                     # TODO(template) update for the repo url
rust-version = "1.87"
version      = "0.1.0"

[workspace.dependencies]
# Workspace crates (path-based dependencies)
miden-mycrate = { path = "crates/mycrate", version = "0.1" }

# miden-base aka protocol dependencies (git = "https://github.com/0xMiden/miden-base"). These should be updated in sync.

# Other miden dependencies. These should align with those expected by miden-base.
miden-air = { version = "0.15" }

# External dependencies
anyhow             = { version = "1.0" }
thiserror          = { default-features = false, version = "2.0" }
tokio              = { version = "1.46" }
tonic              = { version = "0.13" }
tracing            = { version = "0.1" }
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation    = "allow" # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
large_types_passed_by_value = "allow" # Triggered by BlockHeader being Copy + 334 bytes.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
