[package]
name = "integration"
version = "0.1.0"
edition.workspace = true

[dependencies]
# cargo-miden = { version = "0.8" }
# TODO: switch to v0.9 after the compiler release
cargo-miden = { version = "0.8", git = "https://github.com/0xMiden/compiler", rev = "630c65795e44b17d43d2a289009aca96d56f57ee"} # next branch
miden-client = { version = "0.14", features = ["tonic"] }
miden-client-sqlite-store = { version = "0.14", package = "miden-client-sqlite-store" }
miden-standards = { version = "0.14", features = ["testing"] }
miden-testing = "0.14"
miden-mast-package = { version = "0.22", default-features = false }
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
anyhow = "1.0"
