[package]
name = "counter-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# miden = { version = "0.10" }
miden = { version = "0.10", git = "https://github.com/0xMiden/compiler", branch = "next" }

[package.metadata.component]
package = "miden:counter-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountImmutableCode"]
