[package]
name = "counter-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { git = "https://github.com/0xMiden/compiler", rev = "630c65795e44b17d43d2a289009aca96d56f57ee" }

[package.metadata.component]
package = "miden:counter-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountImmutableCode"]
